--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ng2-search-filter": "^0.3.1",
     "ng2-validation": "^4.2.0",
+    "ngx-magicsearch": "^2.1.1",
+    "ngx-query": "^0.2.3-update01",
     "ngx-smart-modal": "^2.0.4",
     "rxjs": "^5.4.2",
+    "typings": "^2.1.1",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
