--- a/package.json
+++ b/package.json
@@ -13,24 +13,27 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
-    "@angular/common": "^4.2.4",
+    "@angular/common": "^4.4.4",
     "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
+    "@angular/core": "^4.4.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.2",
-    "angular2-easy-forms": "^0.3.0",
+    "@ngui/auto-complete": "^0.16.0",
+    "angular-font-awesome": "^2.0.3",
     "boostrap": "^1.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "ng2-search-filter": "^0.3.1",
     "ng2-validation": "^4.2.0",
     "ngx-magicsearch": "^2.1.1",
     "ngx-query": "^0.2.3-update01",
+    "ngx-select-options": "^1.0.5",
     "ngx-smart-modal": "^2.0.4",
     "rxjs": "^5.4.2",
     "typings": "^2.1.1",
