--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "angular-font-awesome": "^2.0.3",
     "boostrap": "^1.0.0",
     "bootstrap": "^3.3.7",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
+    "es5-shim": "^4.5.9",
     "font-awesome": "^4.7.0",
+    "intl": "^1.2.5",
     "jquery": "^3.2.1",
     "ng2-search-filter": "^0.3.1",
     "ng2-validation": "^4.2.0",
     "ngx-magicsearch": "^2.1.1",
+    "ngx-progressbar": "^2.1.0",
     "ngx-query": "^0.2.3-update01",
     "ngx-select-options": "^1.0.5",
     "ngx-smart-modal": "^2.0.4",
