modificación de HC 1 modificar e antecedentes "otros" --> Esta modificación puede generar un problema, dado que no se tipifican los distintos tipos de antecedentes que existen y se pueden agregar de distintas formas, generando incosistenacia en la historia clinica.
Dos posibles soluciones que se me ocurren sería:
A) agregar el subsitema de carga de tipos y sacar los tipos otras/otros. Generando el posible problema de la mala tipificacion
B) Vincularlo a la observacion de los antecedentes, pero puede solo tener 1 (otros)

2 cambio de "uidades Día x cigarrillos día" --> realizado
3 Revisar habitos.. no guarda datos. ver permisos --> Testeado en Desarrollo. Testeado en preproducción?
4 agregar fecha a listado de problemas.--> realizado
5 agregar color. --> Ok estilos realizados... aplicamos acordeon? http://jqueryui.com/accordion/

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,21 @@
 {
         "version": "0.2.0",
         "configurations": [
-               {
-                "name": "Attach",
-                "type": "chrome",
+            {
+                "type": "node",
                 "request": "attach",
+                "name": "Attach",
                 "port": 9222,
+                "url": "http://localhost:4200/"
+                
+            },
+            {
+                "name": "Launch localhost",
+                "type": "chrome",
+                "request": "launch",
+                "port": 9222,                
                 "url": "http://localhost:4200/",
-                "webRoot": "${workspaceRoot}"
+                "webRoot": "${workspaceRoot}/wwwroot"
             }
         ]
     }
