--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ng2-search-filter": "^0.3.1",
     "ng2-validation": "^4.2.0",
     "ngx-magicsearch": "^2.1.1",
+    "ngx-mydatepicker": "^2.2.0",
     "ngx-progressbar": "^2.1.0",
     "ngx-query": "^0.2.3-update01",
     "ngx-select-options": "^1.0.5",
